<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LayoutFormacion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtTitulacion1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/for_titulacion1"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txtFecha1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/for_fecha1"/>
                <TextView
                    android:id="@+id/txtCentro1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/for_empresa1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:id="@+id/LayoutFormacion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtTitulacion2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/for_titulacion2"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txtFecha2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/for_fecha2"/>
                <TextView
                    android:id="@+id/txtCentro2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/for_empresa2" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:id="@+id/LayoutFormacion3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtTitulacion3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/for_titulacion3"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txtFecha3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/for_fecha3"/>
                <TextView
                    android:id="@+id/txtCentro3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/for_empresa3" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:id="@+id/LayoutFormacion4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtTitulacion4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/for_titulacion4"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txtCentro4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/for_empresa4" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
