<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LayoutExperiencia1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/txtFecha1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exp_fecha1"/>
                        <TextView
                            android:id="@+id/txtEmpresa1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exp_empresa1"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <!--<ImageView-->
                        <!--android:id="@+id/imgLogo1"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:src="" />-->
                </LinearLayout>
                <TextView
                    android:id="@+id/txtDescripcion1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exp_descripcion1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:id="@+id/LayoutExperiencia2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/txtFecha2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exp_fecha2"/>
                        <TextView
                            android:id="@+id/txtEmpresa2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exp_empresa2"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <!--<ImageView-->
                        <!--android:id="@+id/imgLogo2"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:src="" />-->
                </LinearLayout>
                <TextView
                    android:id="@+id/txtDescripcion2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exp_descripcion2" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:id="@+id/LayoutExperiencia3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/txtFecha3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exp_fecha3"/>
                        <TextView
                            android:id="@+id/txtEmpresa3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exp_empresa3"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <!--<ImageView-->
                        <!--android:id="@+id/imgLogo3"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:src="" />-->
                </LinearLayout>
                <TextView
                    android:id="@+id/txtDescripcion3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exp_descripcion3" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:id="@+id/LayoutExperiencia4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/txtFecha4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exp_fecha4"/>
                        <TextView
                            android:id="@+id/txtEmpresa4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exp_empresa4"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <!--<ImageView-->
                        <!--android:id="@+id/imgLogo4"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:src="" />-->
                </LinearLayout>
                <TextView
                    android:id="@+id/txtDescripcion4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exp_descripcion4" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:id="@+id/LayoutExperiencia5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/txtFecha5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exp_fecha5"/>
                        <TextView
                            android:id="@+id/txtEmpresa5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exp_empresa5"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <!--<ImageView-->
                        <!--android:id="@+id/imgLogo5"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:src="" />-->
                </LinearLayout>
                <TextView
                    android:id="@+id/txtDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exp_descripcion5" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:id="@+id/LayoutExperiencia6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/txtFecha6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exp_fecha6"/>
                        <TextView
                            android:id="@+id/txtEmpresa6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exp_empresa6"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <!--<ImageView-->
                    <!--android:id="@+id/imgLogo6"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="" />-->
                </LinearLayout>
                <TextView
                    android:id="@+id/txtDescripcion6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exp_descripcion6" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
